--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
     />
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="assets/css/main-page.css" />
+    <link rel="stylesheet" href="https://ix14.netlify.app/assets/css/main-page.css" />
 
     <!--=============== TITLE ===============-->
     <title>404 • IX-14</title>
@@ -97,10 +97,10 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main-page.js"></script>
+    <script src="https://ix14.netlify.app/assets/js/jquery.min.js"></script>
+    <script src="https://ix14.netlify.app/assets/js/browser.min.js"></script>
+    <script src="https://ix14.netlify.app/assets/js/breakpoints.min.js"></script>
+    <script src="https://ix14.netlify.app/assets/js/util.js"></script>
+    <script src="https://ix14.netlify.app/assets/js/main-page.js"></script>
   </body>
 </html>
