--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@
           <!-- Header -->
             <header id="header">
               <center>
-                <img style="max-width: 200px; max-height: 100px;" src="Logo Files/For Web/png/Color logo - no background.png" alt="IX-14 Logo" />
+                <img style="max-width: 200px; max-height: 100px;" src="https://ix14.netlify.app/Logo Files/For Web/png/Color logo - no background.png" alt="IX-14 Logo" />
               </center>
             </header>
           
