--- a/cek-kas/index.html
+++ b/cek-kas/index.html
@@ -50,7 +50,7 @@
             <center>
               <img
                 style="max-width: 200px; max-height: 100px"
-                src="Logo Files/For Web/png/Color logo - no background.png"
+                src="https://ix14.netlify.app/Logo Files/For Web/png/Color logo - no background.png"
                 alt="IX-14 Logo"
               />
             </center>
