--- a/cek-kas/index.html
+++ b/cek-kas/index.html
@@ -101,7 +101,7 @@
               <h2>Menu</h2>
             </header>
             <ul>
-              <li><a href="home">Homepage</a></li>
+              <li><a href="https://ix14.netlify.app/home">Homepage</a></li>
               <li><a href="https://ix14.netlify.app/#intro">Intro</a></li>
               <li><a href="https://ix14.netlify.app/#member">Member</a></li>
               <li><a href="https://ix14.netlify.app/#spotify">Spotify</a></li>
