--- a/home.html
+++ b/home.html
@@ -78,7 +78,7 @@ Kelas Terkreatif (Kreak dan Aktif)
         <article id="intro">
           <h2 class="major">Intro</h2>
           <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-          <p>
+          <p style="text-align: justify;"
             Kelas 9-14 di
             <a href="https://sutomo-mdn.sch.id/sutomo1-smp">Sekolah Sutomo</a>
             adalah sebuah kelas yang terdiri dari 42 orang siswa yang memiliki
