--- a/home.html
+++ b/home.html
@@ -78,21 +78,20 @@ Kelas Terkreatif (Kreak dan Aktif)
         <article id="intro">
           <h2 class="major">Intro</h2>
           <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-          <p style="text-align: justify;"
-            Kelas 9-14 di
-            <a href="https://sutomo-mdn.sch.id/sutomo1-smp">Sekolah Sutomo</a>
-            adalah sebuah kelas yang terdiri dari 42 orang siswa yang memiliki
-            beragam latar belakang dan keahlian. Kelas ini dipimpin oleh seorang
-            wali kelas yang bernama Pak Berkat Johannes Pakpahan, M.Pd atau
-            biasa dipanggil dengan sebutan Pak Bejo oleh para siswa. Sebagai
-            seorang wali kelas yang berpengalaman, Pak Bejo dikenal sebagai
-            sosok yang tegas namun juga bisa menjadi sosok yang akrab dengan
-            para siswanya. Selain itu, ia juga sering memberikan motivasi dan
-            pembelajaran yang berbeda dari pembelajaran yang ada di kelas.
-            Meskipun terdiri dari banyak siswa, kelas 9-14 ini seringkali
-            terlihat kompak dan solid dalam menjalani kegiatan belajar mengajar,
-            serta mempunyai semangat untuk mengembangkan potensi diri
-            masing-masing.
+          <p style="text-align: justify">
+            Kelas 9-14 di Sutomo 1 merupakan sebuah kelas yang terdiri dari 42
+            siswa dengan beragam latar belakang dan keahlian. Kelas ini dipimpin
+            oleh Pak Berkat Johannes Pakpahan, M.Pd, yang akrab dipanggil Pak
+            Bejo oleh para siswanya. Pak Bejo dikenal sebagai seorang wali kelas
+            yang berpengalaman dan dihormati oleh para siswa. Ia mampu
+            menunjukkan keterampilannya sebagai sosok yang tegas namun juga
+            akrab dengan para siswanya, dan selalu memberikan motivasi serta
+            pembelajaran yang berbeda dari pembelajaran konvensional. <br />
+            Meskipun terdiri dari banyak siswa, kelas 9-14 menunjukkan
+            kekompakan dan solidaritas dalam menjalani kegiatan belajar
+            mengajar. Para siswa memiliki semangat untuk mengembangkan potensi
+            diri masing-masing, sehingga tercipta lingkungan belajar yang
+            positif dan mendukung.
           </p>
         </article>
 
