--- a/home.html
+++ b/home.html
@@ -134,7 +134,7 @@ Kelas Terkreatif (Kreak dan Aktif)
             34. MARGARETH JOY FEBRIANTY PAKPAHAN <br />
             35. ORLANDO EDWARD ONGAH - <b>[Bendahara 💳]</b> <br />
             36. RICHARD ANDERSON <br />
-            37. RITCHIE GUANCHELO - <b>[Ketua Kekeluargaan 👨🏽‍🧑‍🧒🏿]</b> <br />
+            37. RITCHIE GUANCHELO - <b>[Ketua Kekeluargaan 💋]</b> <br />
             38. SHAWN HUBERT <br />
             39. SHEZA CHEN <br />
             40. VINCENT WESLEY <br />
