--- a/email-podo.html
+++ b/email-podo.html
@@ -262,7 +262,7 @@
                                                     "
                                                     width="600"
                                                     alt=""
-                                                    src="./assets/email/WhatsApp Image 2023-04-22 at 18.30.03.jpeg"
+                                                    src="https://ix14.netlify.app/assets/email/WhatsApp%20Image%202023-04-22%20at%2018.30.03.jpeg"
                                                     data-bit="iit"
                                                     tabindex="0"
                                                   />
@@ -283,7 +283,7 @@
                                                     "
                                                     width="600"
                                                     alt=""
-                                                    src="./assets/email/WhatsApp Image 2023-04-22 at 18.30.04.jpeg"
+                                                    src="https://ix14.netlify.app/assets/email/WhatsApp%20Image%202023-04-22%20at%2018.30.04.jpeg"
                                                     data-bit="iit"
                                                     tabindex="0"
                                                   />
@@ -304,7 +304,7 @@
                                                     "
                                                     width="600"
                                                     alt=""
-                                                    src="./assets/email/WhatsApp Image 2023-04-22 at 18.30.05 (1).jpeg"
+                                                    src="https://ix14.netlify.app/assets/email/WhatsApp%20Image%202023-04-22%20at%2018.30.05%20(1).jpeg"
                                                     data-bit="iit"
                                                     tabindex="0"
                                                   />
@@ -333,7 +333,7 @@
                                                     "
                                                     width="600"
                                                     alt=""
-                                                    src="./assets/email/WhatsApp Image 2023-04-22 at 18.30.05.jpeg"
+                                                    src="https://ix14.netlify.app/assets/email/WhatsApp%20Image%202023-04-22%20at%2018.30.05.jpeg"
                                                     data-bit="iit"
                                                     tabindex="0"
                                                   />
