--- a/event/index.html
+++ b/event/index.html
@@ -181,7 +181,7 @@
                       <option value="">Kehadiran</option>
                       <option value="🟢 - Hadir">🟢 - Hadir</option>
                       <option value="🔴 - Tidak Hadir">🔴 - Tidak Hadir</option>
-                      <option value="🟡 - Mungkin Hadir">
+                      <option value="🟡 - Mungkin Hadir" disabled>
                         🟡 - Mungkin Hadir
                       </option>
                     </select>
