--- a/event/gatcha-kehadiran.html
+++ b/event/gatcha-kehadiran.html
@@ -136,7 +136,7 @@
                     // Notify user of assigned time slot
                     window.Swal.fire({
                       title: `Hi ${capitalizedFirstName}!`,
-                      html: `Your assigned time slot is <strong>${assignedTimeSlot}</strong>.<br>Please arrive between <strong>${getTimeSlotStart(
+                      html: `Your assigned time slot is <strong>${assignedTimeSlot}</strong>.<br>Please arrive between <br> <strong>${getTimeSlotStart(
                         assignedTimeSlot
                       )}</strong> and <strong>${getTimeSlotEnd(
                         assignedTimeSlot
