--- a/event/staff/pengeluaran.html
+++ b/event/staff/pengeluaran.html
@@ -210,17 +210,47 @@
           <div class="kolom-detail">5kg x IDR 10.000</div>
         </div>
       </div>
-
-      <hr />
+      <br />
 
       <div class="kolom">
         <div class="baris">
-          <div class="kolom-nama">IDR 390.000</div>
-          <div class="kolom-harga">IDR 624.900</div>
+          <div class="kolom-nama">DLL BAHAN</div>
+          <div class="kolom-harga">IDR 68.000</div>
+        </div>
+        <div class="baris">
+          <div class="kolom-detail">
+            bawang merah & putih (18k), piring (35k), sendok (10), ketumbar (5)
+          </div>
+        </div>
+        <hr />
+
+        <div class="kolom">
+          <div class="baris">
+            <div class="kolom-nama">IDR 458.000</div>
+            <div class="kolom-harga">IDR 556.900</div>
+          </div>
         </div>
       </div>
     </div>
 
+    <hr />
+    <center>
+      <h3>TRANSMART - DP</h3>
+    </center>
+    <hr />
+    <div class="kolom">
+      <div class="baris">
+        <div class="kolom-nama">BAHAN</div>
+        <div class="kolom-harga">IDR 611.906</div>
+      </div>
+    </div>
+    <hr />
+    <div class="kolom">
+      <div class="baris">
+        <div class="kolom-nama">IDR 611.906</div>
+        <div class="kolom-harga">- IDR 55.006</div>
+      </div>
+    </div>
     <center>
       .
       <br />
